--- a/src/main/resources/ui/ConversionDialogView.fxml
+++ b/src/main/resources/ui/ConversionDialogView.fxml
@@ -1,99 +1,159 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-          minWidth="-Infinity" prefHeight="279.0" prefWidth="447.0" xmlns="http://javafx.com/javafx/8"
-          fx:controller="com.sadvit.dialog.ConversionDialogController">
+
+<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="279.0" prefWidth="447.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sadvit.dialog.ConversionDialogController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="448.0" minWidth="10.0" prefWidth="292.0"/>
-        <ColumnConstraints/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="448.0" minWidth="10.0" prefWidth="292.0" />
+        <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="291.0" minHeight="10.0" prefHeight="241.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="291.0" minHeight="10.0" prefHeight="241.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <opaqueInsets>
-        <Insets/>
+        <Insets />
     </opaqueInsets>
-    <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
-        <GridPane.margin>
-            <Insets/>
-        </GridPane.margin>
-        <Tab text="Move">
-            <GridPane>
-                <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                </columnConstraints>
-                <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                </rowConstraints>
-            </GridPane>
-        </Tab>
-        <Tab text="Rotate">
-            <GridPane>
-                <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                </columnConstraints>
-                <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                </rowConstraints>
-            </GridPane>
-        </Tab>
-        <Tab text="Scale">
-            <GridPane>
-                <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                </columnConstraints>
-                <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                </rowConstraints>
-            </GridPane>
-        </Tab>
-        <Tab text="Reflect">
-            <GridPane>
-                <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                </columnConstraints>
-                <rowConstraints>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                </rowConstraints>
-            </GridPane>
-        </Tab>
-    </TabPane>
-    <GridPane GridPane.columnIndex="1">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <GridPane GridPane.rowIndex="1">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            </rowConstraints>
-            <Button fx:id="cancelButton" mnemonicParsing="false" text="Cancel" GridPane.columnIndex="1"
-                    GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
-            <Button fx:id="applyButton" mnemonicParsing="false" text="Apply" GridPane.halignment="CENTER"
-                    GridPane.valignment="CENTER"/>
-        </GridPane>
-        <ListView editable="true" prefHeight="200.0" prefWidth="200.0"/>
-    </GridPane>
+   <children>
+       <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+           <GridPane.margin>
+               <Insets />
+           </GridPane.margin>
+          <tabs>
+              <Tab text="Move">
+                 <content>
+                     <GridPane>
+                         <columnConstraints>
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.0" minWidth="10.0" prefWidth="74.0" />
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="221.0" minWidth="10.0" prefWidth="160.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="204.0" minWidth="10.0" prefWidth="56.0" />
+                         </columnConstraints>
+                         <rowConstraints>
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                         </rowConstraints>
+                     <children>
+                        <Button fx:id="addMoveButton" mnemonicParsing="false" text="Add" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                        <Slider fx:id="moveDySlider" GridPane.columnIndex="1" />
+                        <Slider fx:id="moveDxSlider" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label text="dx:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label text="dy:" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <TextField editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Values:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                     </children>
+                     </GridPane>
+                 </content>
+              </Tab>
+              <Tab text="Rotate">
+                 <content>
+                     <GridPane>
+                         <columnConstraints>
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.0" minWidth="10.0" prefWidth="74.0" />
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="221.0" minWidth="10.0" prefWidth="160.0" />
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="204.0" minWidth="10.0" prefWidth="56.0" />
+                         </columnConstraints>
+                         <rowConstraints>
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                         </rowConstraints>
+                         <children>
+                             <Button fx:id="addRotateButton" mnemonicParsing="false" text="Add" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                             <Slider fx:id="rotateFSlider" GridPane.columnIndex="1" />
+                             <Label text="f:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                             <TextField editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                             <Label text="Values:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                         </children>
+                     </GridPane>
+                 </content>
+              </Tab>
+              <Tab text="Scale">
+                 <content>
+                     <GridPane>
+                         <columnConstraints>
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.0" minWidth="10.0" prefWidth="74.0" />
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="221.0" minWidth="10.0" prefWidth="160.0" />
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="204.0" minWidth="10.0" prefWidth="56.0" />
+                         </columnConstraints>
+                         <rowConstraints>
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                         </rowConstraints>
+                         <children>
+                             <Button fx:id="addScaleButton" mnemonicParsing="false" text="Add" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                             <Slider fx:id="scaleDySlider" GridPane.columnIndex="1" />
+                             <Slider fx:id="scaleDxSlider" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                             <Label text="a:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                             <Label text="b:" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                             <TextField editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                             <Label text="Values:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                         </children>
+                     </GridPane>
+                 </content>
+              </Tab>
+              <Tab text="Reflect">
+                 <content>
+                     <GridPane>
+                         <columnConstraints>
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.0" minWidth="10.0" prefWidth="74.0" />
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="221.0" minWidth="10.0" prefWidth="160.0" />
+                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="204.0" minWidth="10.0" prefWidth="56.0" />
+                         </columnConstraints>
+                         <rowConstraints>
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                         </rowConstraints>
+                         <children>
+                             <Button fx:id="addReflectButton" mnemonicParsing="false" text="Add" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+                             <Slider fx:id="reflectASlider" GridPane.columnIndex="1" />
+                             <Slider fx:id="reflectBSlider" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                             <Label text="A:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                             <Label text="B:" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                             <TextField editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                             <Label text="Values:" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                            <Label text="C:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                            <Slider fx:id="reflectCSlider" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                         </children>
+                     </GridPane>
+                 </content>
+              </Tab>
+          </tabs>
+       </TabPane>
+       <GridPane GridPane.columnIndex="1">
+           <columnConstraints>
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+           </columnConstraints>
+           <rowConstraints>
+               <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+           </rowConstraints>
+          <children>
+              <GridPane GridPane.rowIndex="1">
+                  <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                 <children>
+                     <Button fx:id="cancelButton" mnemonicParsing="false" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                     <Button fx:id="applyButton" mnemonicParsing="false" onAction="#draw" text="Apply" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                 </children>
+              </GridPane>
+              <ListView editable="true" prefHeight="200.0" prefWidth="200.0" />
+          </children>
+       </GridPane>
+   </children>
 </GridPane>
